compiler/tests/fuzz/negative_corpus/check_return_type.mlc
fn f() -> i32 = "not an integer"